# torrentfs

./: .gitignore  AGENTS.md  INSTALL.en.md  INSTALL.md  INSTALL.pt.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci-distros.yml  ci.yml
cli/: client.py  main.py
common/: rpc.py
config/: torrentfsd.json
daemon/: engine.py  ftp_main.py  ftp_server.py  index.py  main.py  manager.py  server.py  watcher.py
docs/: ARCHITECTURE.md  PROTOCOL.md  ROADMAP.md
fuse/: client.py  fs.py
plugins/: __init__.py  archive_org.py  base.py  magnet.py  registry.py
scripts/: build_deb.sh
scripts/systemd/: torrentfs.service
tests/: test_list_files.py  test_read_file.py
torrentfs_fuse/: client.py  fs.py
