[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "torrentfsd"
version = "0.1.32"
description = "Read-only P2P filesystem built on BitTorrent."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
  "bencodepy",
  "libtorrent",
  "fusepy",
]

[project.scripts]
torrentfs = "cli.main:main"
torrentfsd = "daemon.main:main"
torrentfs-fuse = "torrentfs_fuse.fs:main"

[tool.setuptools]
packages = ["cli", "common", "daemon", "plugins", "torrentfs_fuse"]
