[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "torrentfsd"
version = "0.1.33"
description = "Read-only P2P filesystem built on BitTorrent."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
  "bencodepy",
  "libtorrent",
  "fusepy",
  "argcomplete",
  "pyftpdlib",
]

[project.scripts]
torrentfs = "cli.main:main"
torrentfsd = "daemon.main:main"
torrentfs-fuse = "torrentfs_fuse.fs:main"
torrentfs-ftp = "daemon.ftp_main:main"

[tool.setuptools]
packages = ["cli", "common", "daemon", "plugins", "torrentfs_fuse"]
